# VIBE-paper

./: README.md  USAGE.md  codex-plan.md
rust/: Cargo.toml
rust/crates/api/src/: types.rs
rust/crates/api/src/providers/: openai_compat.rs
rust/crates/claw-gui/src/: app.rs  backend.rs  main.rs  workspace.rs
rust/crates/galen/: .gitignore  index.html  package-lock.json  package.json
rust/crates/galen/src/: App.css  App.tsx
rust/crates/galen/src-tauri/: Cargo.toml  tauri.conf.json
rust/crates/galen/src-tauri/capabilities/: default.json
rust/crates/galen/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs
rust/crates/galen/src-tauri/src/tools/: command.rs  search.rs
rust/crates/galen/src/components/: ChatPanel.tsx  EditorPanel.tsx  LibraryPanel.tsx  WelcomeScreen.tsx  WorkspaceTree.tsx
rust/crates/rusty-claude-cli/.claw/plugins/: installed.json
rust/crates/vibe-paper/: package-lock.json  package.json
rust/crates/vibe-paper/src/: App.css  App.tsx  types.ts
rust/crates/vibe-paper/src-tauri/: Cargo.toml
rust/crates/vibe-paper/src-tauri/src/: backend.rs  lib.rs
rust/crates/vibe-paper/src-tauri/src/tools/: fs.rs  medical.rs  mod.rs  workspace_path.rs
rust/crates/vibe-paper/src/components/: ChatPanel.tsx  PaperPanel.tsx  StatusBar.tsx  TabBar.tsx  WelcomeScreen.tsx
rust/crates/vibe-paper/src/hooks/: useChat.ts
scripts/windows/: Install-Galen.ps1  Install-GalenShortcut.ps1  Start-Galen.ps1
