[workspace]
members = [
    "crates/api",
    "crates/claw-gui",
    "crates/commands",
    "crates/compat-harness",
    "crates/medical-core",
    "crates/mock-anthropic-service",
    "crates/model-router",
    "crates/plugins",
    "crates/runtime",
    "crates/rusty-claude-cli",
    "crates/telemetry",
    "crates/tools",
    "crates/galen/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
