[package]
name = "vibe-paper"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "VIBE Paper — AI-powered medical research desktop app"

[lib]
name = "vibe_paper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
dirs = "6"
glob = "0.3"
api = { path = "../../api" }
async-trait = "0.1"
model-router = { path = "../../model-router" }
medical-core = { path = "../../medical-core" }
